--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
 
+body {
+  font-family: 'Inter', sans-serif;
+}
+h1, h2, h3, h4, h5 {
+  font-family: 'Poppins', sans-serif;
+}
 *{
   box-sizing: border-box;
-   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
-
-
 }
 :root {
   --color-icons: linear-gradient(60deg, #596fee,#f700ff);
