--- a/docs/assets/css/login.css
+++ b/docs/assets/css/login.css
@@ -354,8 +354,8 @@ body{
     padding: 15px 0px;
     width: 100%;
     border: none;
-    background: linear-gradient(135deg, #38bdf8, #22c55e);
-    color: white;
+    color: #02135e;
+    background: linear-gradient(135deg, #22c5af, #38bdf8);
     font-weight: bold;
     font-size: 14px;
     cursor: pointer;
