--- a/docs/assets/css/resetPass.css
+++ b/docs/assets/css/resetPass.css
@@ -22,7 +22,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; 
 }
 
 body {
@@ -34,7 +34,47 @@ body {
   color: var(--text-main);
   padding: 24px;
 }
+/*loader spin*/
+.container_loader{
+  position: fixed;
+  inset: 0;
+  z-index: 10;
+  display: none;
+}
 
+.container_loader.show{
+  display: block;
+}
+
+.rederigir_login{
+  width: 100%;
+  height: 100%;
+  background-color: #020c3aab;
+  backdrop-filter: blur(6px);
+  display: grid;
+  place-items: center;
+  animation: intro 0.5s ease;
+}
+
+.conten_loader{
+  display: grid;
+  justify-items: center;
+  gap: 20px;
+}
+
+.loader{
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0,255,179,0.25);
+  border-top-color: #00ffb3;
+  border-radius: 50%;
+  animation: spin 0.9s linear infinite;
+}
+
+.rederigir_login h3{
+  color: #00ffb3;
+  font-weight: 500;
+}
 
 /*Mensaje recover conexión*/
 .conexion_recover{
@@ -69,6 +109,24 @@ body {
     font-size: 15px;
     font-family: "Roboto";
 }
+/* Animación de aparición */
+@keyframes intro {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes spin{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
+
 
 @keyframes fadeUp {
   from {
@@ -80,6 +138,8 @@ body {
     transform: translateY(0) scale(1);
   }
 }
+
+/*===============================*/
 .reset-card {
   width: 100%;
   max-width: 460px;
@@ -92,7 +152,7 @@ body {
   animation: fadeIn 0.5s ease;
 }
 
-/* HEADER */
+
 .reset-card h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 30px;
@@ -152,7 +212,7 @@ body {
   cursor: pointer;
 }
 
-/* BUTTON */
+
 .reset-form button {
   margin-top: 8px;
   padding: 14px;
@@ -171,7 +231,7 @@ body {
   box-shadow: 0 12px 30px rgba(34,197,175,.35);
 }
 
-/* MESSAGE */
+
 #msg {
   margin-top: 12px;
   text-align: center;
@@ -190,6 +250,9 @@ body {
 
 /* MOBILE */
 @media (max-width: 480px) {
+  body{
+    padding: 20px;
+  }
   .reset-card {
     height: 100%;
     border-radius: 0;
