--- a/docs/assets/css/signup.css
+++ b/docs/assets/css/signup.css
@@ -27,7 +27,6 @@ body {
   color: #e5e7eb;
 }
 
-
 /*Mensaje recover conexión*/
 .conexion_recover{
     position: absolute;
@@ -102,7 +101,7 @@ body {
   color: #94a3b8;
 }
 
-/* LOGIN LINK */
+
 #rederigir_login {
   display: inline-block;
   margin-left: 4px;
@@ -115,7 +114,7 @@ body {
   text-decoration: underline;
 }
 
-/* FORM */
+
 .registro {
   margin-top: 28px;
   display: flex;
@@ -178,7 +177,7 @@ body {
   font-size: 16px;
   font-weight: 600;
   color: #020617;
-  background: linear-gradient(135deg, #38bdf8, #22c55e);
+  background: linear-gradient(135deg, #22c5af, #38bdf8);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
