--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -32,6 +32,36 @@ body {
   color: var(--text-main);
   padding: 24px;
 }
+.containerNav{
+  position: absolute;
+  top: 18px;
+  left: 18px;
+  display: grid;
+  z-index: 15;
+  justify-content: left;
+  font-size: 18px;
+  background-size: 0;
+  padding-top: 5px;
+  padding-left: 7px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
+  background: var(--card-bg);
+  box-shadow:
+    0 30px 70px rgba(0,0,0,.7),
+  inset 0 0 0 1px var(--border-soft);
+  color: #38bdf8;
+}
+.containerNav:hover{
+    box-shadow:
+    0 0 0 2px var(--primary-soft),
+    inset 0 0 0 1px var(--primary);
+}
+.nav{
+  left: 0;
+}
 /*Mensaje recover conexión*/
 .loader{
   display: none;
@@ -321,8 +351,9 @@ body {
 }
 .contenedor{
   position: relative;
+  margin-top: 0px;
   width: 100%;
-  height: 100%;
+  height: 70%;
   border-radius: 0;
 }
 .contenido{
