--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -17,6 +17,8 @@
 
   --transition: 0.25s ease;
 }
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Poppins:wght@500;600;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
