--- a/docs/assets/css/resetPass.css
+++ b/docs/assets/css/resetPass.css
@@ -77,18 +77,23 @@ body {
 }
 
 /*Mensaje recover conexión*/
+/*========================*/
 .conexion_recover{
     position: absolute;
     right: 20px;
     bottom: 30px;
     border-radius: 12px;
-    background: rgb(255, 255, 255);
-    width: 200px;
+    border-radius: var(--radius-lg);
+    width: 300px;
     height: 100px;
     z-index: 10;
-    box-shadow: 0 0  0 2px rgb(95, 95, 95);
-    display: none;
-   
+    box-shadow: 0 0 10px rgb(0, 203, 230);
+    display: none; 
+}
+.conx{
+    display: grid;
+    grid-template-columns: auto;
+    gap: 4px;
 }
 .conexion_recover.active{
     display: block;
@@ -99,16 +104,17 @@ body {
     text-align: center;
 }
 .content_msg i{
-    color: #00ac81;
+    color: #8bf7dc;
     font-size: 36px;
     margin: 6px;
 }
-.content_msg samp{ 
+.content_msg p{ 
     font-weight:600;
-    color: #00ac81;
+    color: #8bf7dc;
     font-size: 15px;
     font-family: "Roboto";
 }
+
 /* Animación de aparición */
 @keyframes intro {
   from {
@@ -141,7 +147,8 @@ body {
 
 /*===============================*/
 .reset-card {
-  max-width: 460px;
+  width: 460px;
+  position: relative;
   background: var(--card-bg);
   border-radius: var(--radius-lg);
   padding: 32px 34px;
@@ -250,10 +257,11 @@ body {
 /* MOBILE */
 @media (max-width: 480px) {
   body{
-    padding: 10px;
+    padding: 20px;
   }
   .reset-card {
     height: 100%;
+    width: 100%;
     border-radius: 0;
   }
 
@@ -267,4 +275,27 @@ body {
   font-weight: 500;
   font-size: 16px;
 }
+
+.conexion_recover{
+    width: 80%;
+    height: 50px;
+    right: 40px;
+}
+.conx{
+    display: grid;
+    grid-template-columns: 10% auto;
+    gap: 16px;
+    justify-content: center;
+    
+}
+
+.content_msg i{
+    font-size: 26px;
+    margin: 0px;
+    margin-top: 3px;
+}
+.content_msg p{ 
+    margin-top: 6px;
+}
+
 }
