--- a/docs/assets/css/signup.css
+++ b/docs/assets/css/signup.css
@@ -27,6 +27,50 @@ body {
   color: #e5e7eb;
 }
 
+/*loader spin*/
+.container_loader{
+  position: fixed;
+  inset: 0;
+  z-index: 10;
+  display: none;
+}
+
+.container_loader.show{
+  display: block;
+}
+
+.rederigir_login{
+  width: 100%;
+  height: 100%;
+  background-color: #020c3aab;
+  backdrop-filter: blur(6px);
+  font-family: "Inter" ;
+  display: grid;
+  place-items: center;
+  animation: intro 0.5s ease;
+}
+
+.conten_loader{
+  display: grid;
+  justify-items: center;
+  gap: 20px;
+}
+
+.loader{
+  width: 36px;
+  height: 36px;
+  border: 4px solid rgba(0,255,179,0.25);
+  border-top-color: #00ffb3;
+  border-radius: 50%;
+  animation: spin 0.6s linear infinite, intro 0.5s ease;;
+}
+
+.rederigir_login h3{
+  color: #00ffb3;
+  font-weight: 500;
+  font-size: 16px;
+}
+
 /*Mensaje recover conexión*/
 .conexion_recover{
     position: fixed;
@@ -63,6 +107,23 @@ body {
     color: #8bf7dc;
     font-size: 15px;
     font-family: "Roboto";
+}
+
+@keyframes intro {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes spin{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
 }
 
 @keyframes fadeUp {
@@ -141,7 +202,7 @@ body {
   padding: 14px 16px;
   border-radius: 14px;
   box-shadow: inset 0 0 0 1px rgba(148, 163, 184, 0.12);
-  transition: 0.25s ease;
+  transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 .input_registro:focus-within {
@@ -149,6 +210,29 @@ body {
     0 0 0 2px rgba(56, 189, 248, 0.6),
     inset 0 0 0 1px rgba(56, 189, 248, 0.4);
 }
+
+
+.input_registro.error {
+  box-shadow:
+    0 0 0 2px rgba(255, 0, 98, 0.678),
+    inset 0 0 0 1px rgba(255, 0, 55, 0.4);
+}
+
+
+.input_registro.success {
+  box-shadow:
+    0 0 0 2px rgba(0, 255, 0, 0.678),
+    inset 0 0 0 1px rgba(0, 255, 106, 0.4);
+}
+
+.input_registro.success i {
+  color: #22c55e;
+}
+
+.input_registro.error i {
+  color: #ef4444;
+}
+
 
 /* INPUT */
 .input_registro input {
@@ -254,6 +338,15 @@ body {
 }
 .content_msg p{ 
     margin-top: 6px;
+}
+
+.loader{
+  width: 30px;
+  height: 30px;
+}
+
+.rederigir_login h3{
+  font-size: 15px;
 }
 
 
