--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -94,6 +94,7 @@ body {
 /*========================*/
 .messageModal{
   position: fixed;
+  top: 0;
   z-index: 40;
   display: none;
   width: 100%;
@@ -385,6 +386,10 @@ body {
 }
 .content_msg p{ 
     margin-top: 6px;
+}
+
+.messageModal{
+  top: 0;
 }
 
 }
