--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -64,11 +64,11 @@ body {
 .nav{
   left: 0;
 }
-/*Mensaje recover conexión*/
+
 .loader{
-  display: none;
+  display: block;
 }
-.loader.show{
+.loader{
   position: absolute;
   margin-left: 10%;
   width: 620px;        
@@ -125,12 +125,17 @@ body {
   line-height: 1.2;
   animation: fadeIn2 .4s ease-in;
 }
+.headerMessage{
+  padding: 10px;
+  background: #020617;
+  border-radius: 12px;
+  margin-top: 10px;
+}
 .Contentext h3{
   text-align: center;
   color: #e0e0e0;
 }
 .textInfo{
-  margin-top: 10px;
   font-size: 15px;
   color: #c5c5c5;
 }
@@ -355,14 +360,15 @@ body {
   position: relative;
   margin-top: 0px;
   width: 100%;
-  height: 80%;
-  border-radius: 0;
+  height: 71%;
+  border-radius: 8px;
 }
+
 .contenido{
     padding: 20px 20px;
 }
 .Contentext{
-  width: 300px;
+  width: 330px;
   height: 500px;
 }
 
