--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -461,8 +461,11 @@ svg{
   position: relative;
   margin-top: 0px;
   width: 100%;
-  height: 352px;
+  height: 400px;
   border-radius: 8px;
+}
+.loader.show{
+  margin-top: 38px;
 }
 
 .contenido{
