--- a/docs/assets/css/recover.css
+++ b/docs/assets/css/recover.css
@@ -96,7 +96,7 @@ body {
   position: fixed;
   top: 0;
   z-index: 40;
-  display: none;
+  display: block;
   width: 100%;
   height: 100%;
 }
@@ -231,12 +231,9 @@ svg{
   scale: .95;
 }
 
-#loginhrF {
-    background: linear-gradient(135deg, #22c5af, #38bdf8);
-}
 #loginhrF a{
   text-decoration: none;
-  color: #020617;
+  color: #c5c5c5;
   font-weight: 500;
 }
 
@@ -477,9 +474,11 @@ svg{
 }
 .Contentext{
   width: 330px;
-  height: 560px;
+  height: 600px;
   background: rgba(0, 18, 63, 0.92);
 }
+.IconoMessage {
+  height: 280px;}
 .btnsOpciones{
   display: grid;
   grid-template-columns: auto 40% ;}
