--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700&display=swap');
 
 body {
+  overflow: hidden;
   font-family: 'Inter', sans-serif;
 }
 h1, h2, h3, h4, h5 {
   font-family: 'Poppins', sans-serif;
 }
 *{
+  margin: 0;
   box-sizing: border-box;
   font-optical-sizing: auto;
 }
@@ -66,9 +68,13 @@ h1, h2, h3, h4, h5 {
 .name_Users{
   position: relative;
   width: 100%;
-  height: 30px;
+  height: 28px;
   overflow:scroll;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+.contenNameUser{
+  width: 100%;
 }
 .name_Users::-webkit-scrollbar{
   display: none;
@@ -206,6 +212,8 @@ height: 50px;
   margin: 0;
   margin-top: 8px;
   margin-left: 6px;
+  color: #5a5a5a;
+  font-size: 16px;
 
 }
 #tasksOptions button{
@@ -248,14 +256,21 @@ height: 50px;
 }
 .nav_themes{
   position: absolute;
-  margin-top: 30px;
-  height: 300px;
+  margin-top: 40px;
+  height: 240px;
   width: 210px;
   border-radius: 12px;
-  box-shadow: 0 0 6px gainsboro;
+  box-shadow: 0 0 30px gainsboro;
   background: white;
-  margin-right: 200px;
   padding: 20px;
+  margin-left: -78px;
+
+}
+
+.nav_themes i{
+  background: var(--color-icons);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 .nav_themes ul{
   list-style: none;
@@ -452,17 +467,21 @@ margin: 0;
 /*===========================================*/
 .contenedor{
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: 59.8% auto;
   position: relative;
+  gap: 12px;
   padding: 20px 20px 20px 4px;
-  height: 93vh;
+  height: 72vh;
   overflow-y: auto;
+}
+.contenedor::-webkit-scrollbar{
+  display: none;
 }
 
 .subir_tarea{
   position: fixed;
-  width: 84%;
-  height: 98vh;
+  width: 83%;
+  height: 80vh;
   z-index: 22;
   display: none;
   background-color: white;
@@ -476,12 +495,13 @@ margin: 0;
 }
 .contenido_main{
   position: relative;
-  height: 89vh;
+  height: 70vh;
   padding-top: 16px;
   margin: 10px 0 0 0;
   border: 1px solid gainsboro;
   border-radius: 5px;
   background-color: white;
+  overflow-y: auto;
   display: grid;
   grid-template-columns: 15% auto;
   gap: 15px;
@@ -517,7 +537,7 @@ margin: 0;
 }
 
 
-/* esconder scrollbar en Webkit */
+
 .carousel::-webkit-scrollbar { display: none; }
 
 /* tarjetas */
@@ -551,14 +571,16 @@ margin: 0;
 
 #task-input input{
   padding: 16px 8px;
-  border-top-left-radius: 12px;
-  border-end-start-radius: 12px;
   background:rgba(249, 254, 255, 0.788);
   width: 100% ;
-  border:  2px solid rgb(113, 194, 226);
+  border:none;
+  box-shadow: 0 2px  0 0px gainsboro;
   transition:  0.30s ease-in-out;
   font-size: 15px;
   animation:  fadeUp 0.40s ease-in-out;
+}
+#task-input input::placeholder{
+  font-size: 16px;
 }
 
 #addBtn{
@@ -569,12 +591,18 @@ margin: 0;
   cursor: pointer;
 }
 #taskList{
-  height: auto;
-  padding: 30px;
+  position: relative;
+  padding: 0px;
+  margin-top: 6px;
+  height: 373px;
+  overflow-y: auto;
+  padding: 0 6px;
+  padding-top: 6px;
 }
 #taskList::-webkit-scrollbar{
   width: 4px;
   height: 4px;
+  display: none;
 }
 #taskList::-webkit-scrollbar-thumb{
   background-color: #ffffff46;
@@ -639,7 +667,7 @@ margin: 0;
   display:grid;
   grid-template-columns: repeat(1, auto);
   gap: 15px;
-  max-height: 530px;
+  height: 490px;
   overflow-y: auto;
   padding: 14px;
 }
@@ -707,25 +735,34 @@ margin: 0;
   border-radius: 6px;
 }
 .CateIcons{
-  font-size: 19px;
+  font-size: 15spx;
 }
 .task-cat{
   background: linear-gradient(40deg, rgb(250, 252, 255), rgb(236, 236, 236), rgb(247, 247, 248) );
   box-shadow: 0 0 10px gainsboro;
-  font-size: 15px;
+  font-size: 14px;
   border-radius: 12px;
-  padding-top: 4px;
-  font-weight: bold;
   color: #069caf;
   text-align: center;
+  font-size: 14px;
+  font-weight:500;
+  position: absolute;
+  width: 100%;
+  padding: 6px 6px ;
 }
 .task-pro{
   font-size: 15px;
-  padding: 12px 12px;
+  padding: 6px 6px;
   border-radius: 12px;
-  font-weight: bold;
   text-align: center;
   border-bottom: 2px dashed gainsboro;
+  font-weight: 500;
+  position: absolute;
+  width: 100%;
+}
+.contentCatPro{
+  position: relative;
+  height: 34px;
 }
 /*Horario*/
 .horaio_día{
@@ -737,14 +774,14 @@ margin: 0;
 }
 .tiempo{
   border-radius: 10px;
-   background-color: #020580;
   padding: 10px;
   display: flex;
   gap: 10px;
   justify-content: center;
   font-weight: bold;
-  color: #ffffff;
+  color: #616161;
   cursor: pointer;
+  box-shadow: 0 0 10px gainsboro;
 }
 .tiempo p{
   margin: 0;
@@ -792,8 +829,8 @@ margin: 0;
   height: 120px;
   padding: 5px;
   border-radius: 5px;
-  margin-top: 26px;
-  background: #c7c9fa8c;
+  margin-top: 20px;
+  background: #ebeffc;
 }
 .descrition_box {
   display: grid;
@@ -812,7 +849,8 @@ margin: 0;
 }
 .repetición{
   display: grid;
-  grid-template-columns: 30% auto;
+  grid-template-columns: auto auto;
+  gap: 8px;
 }
 .repetición p{
   margin: 0;
@@ -823,7 +861,8 @@ margin: 0;
   color: #00af17;
   font-weight: bold;
   border-radius: 8px;
-  width: 106px;
+  width: 100%;
+  text-align: center;
 }
 #openOpiciones{
 padding: 8px 50px;
@@ -835,18 +874,19 @@ color: #290088;
 font-weight: bold;
 transition: 0.5s ease;
 cursor: pointer;
+font-size: 15px;
 }
 .conten_repetion{
   width: 200px;
   height: 180px;
   background: white;
   padding: 15px;
-  border: 1px solid rgba(145, 145, 145, 0.575);
+  border: 1px solid rgb(145, 145, 145);
   box-shadow: 0 0 30px rgb(206, 206, 206);
   border-radius: 10px;
   transition: 0.4s ease;
   overflow: hidden;
-    animation: themeAnimation 0.16s ease-in-out;
+  animation: themeAnimation 0.16s ease-in-out;
 }
 #repet{
   padding: 8px 8px; color: #474747;
@@ -870,10 +910,10 @@ cursor: pointer;
 .repeticion_tasks.show{
   position: absolute;
   height: 100%;
-  width: 100%;
-  transform: translateY(-190px) translateX(113px);
+  transform: translateY(-190px) translateX(165px);
   z-index: 29;
   display:block;
+  background: transparent;
 }
 #openOpiciones:hover{
   scale: 1.02;
@@ -892,22 +932,36 @@ cursor: pointer;
 #Guadar-btn:hover{
   transform: scale(1.04);
 }
+
+/*======================================*/
+.grafiaca_progreso{
+  box-shadow: 0 0 10px gainsboro;
+  border-radius: 12px;
+  grid-row: 1 / span 0;
+}
+
+/*=====================================*/
+.proyects{
+  box-shadow: 0 0 10px gainsboro;
+  border-radius: 12px;
+}
 /*=====================================*/
 .List_check{
-  padding: 20px;
+  position: relative;
+  padding: 12px;
   border-radius: 8px;
-  grid-column: 1 / span 2;
   box-shadow: 0 0 8px gainsboro;
   opacity: 1;
   transition: 0.10s ease;
+  grid-row: 1/ span 2; 
 }
 .List_check.show{
   opacity: 0;
 }
 .task-item{
   display: grid;
-  grid-template-columns: 58% 16% auto 2%;
-  box-shadow: 0 0 10px rgba(204, 204, 204, 0.781);
+  grid-template-columns: 54% 20% auto 2%;
+  box-shadow: 0 0  0 1px rgba(170, 170, 170, 0.781);
   gap: 20px;
   transition: 0.90s ease-out;
   padding: 12px;
@@ -920,7 +974,8 @@ cursor: pointer;
 .task-text {
   cursor: pointer;
   flex-grow: 5;
-  padding-top: 3px ;
+  padding-top: 6px ;
+  margin-left: 8px;
 }
 .box_tasks_text{
   display: grid;
@@ -933,10 +988,7 @@ cursor: pointer;
   opacity: 0.6;
   animation: popCkeck2 0.40s ease-in-out;
 }
-.checked{
-  margin-top: 0px;
 
-}
 .check {
   appearance: none;   /* Quita el estilo del sistema */
   -webkit-appearance: none;
@@ -947,6 +999,7 @@ cursor: pointer;
   cursor: pointer;
   transition: 0.25s ease;
   position: relative;
+  margin-top: 6px;
 }
 
 .check:hover {
@@ -969,11 +1022,11 @@ cursor: pointer;
   left: 4px;
 }
 .info_tarea{
-  margin-top: 20px;
   box-shadow: 0 0 10px gainsboro;
   padding: 10px;
   opacity: 1;
   transition: 0.10s ease;
+  border-radius: 12px;
 }
 .info_tarea.show{
   opacity: 0;
@@ -993,10 +1046,15 @@ cursor: pointer;
   border-radius: 8px;
   border: 2px dashed rgb(255, 0, 140);
   background-color: #8cc7d41e;
+  position: relative;
+  overflow: hidden;
+}
+.caja2{
+  margin-top: 15%;
 }
 .viso_caja_vacia{
   grid-column: 2/ span 2 ;
-  height: 380px;
+  height: 360px;
   display: grid;
   justify-content: center;
   justify-items: center;
@@ -1006,7 +1064,7 @@ cursor: pointer;
   background-color: #8cc7d41e;
 }
 .viso_caja_vacia p{
-  transform: translateY(-70px);
+  transform: translateY(-68px);
 }
 .caja{
   width: 90px;
@@ -1063,10 +1121,10 @@ cursor: pointer;
   color: rgb(255, 0, 140);
 }
 .openEditar{
-  font-size: 20px;
-  padding-top: 12px;
+  font-size: 16px;
+  padding-top: 8px;
   cursor: pointer;
-  color: #001aff;
+  color: #949494;
 
 }
 .editar_item{
@@ -1268,7 +1326,7 @@ cursor: pointer;
   animation: pop 0.10s ease forwards 0.1s;
 }
 
-/* Check en pseudo-elemento */
+
 .check-anim::after {
   content: "";
   position: absolute;
@@ -1495,9 +1553,7 @@ margin: 4px 0 0 0;}
   display: none;
   margin-right: 90px;
 }
-.themes i{
-  padding-left: 0px;
-}
+
 
 .check-anim {
   width: 80px;
