--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -1152,7 +1152,7 @@ font-size: 15px;
   left:0;
   width: 100%;
   height: 100%;
-  z-index: 17;
+  z-index: 30;
   background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(6px);
   display: flex;
@@ -1168,7 +1168,7 @@ font-size: 15px;
   background-color: rgb(255, 255, 255);
   border-radius: 8px;
   box-shadow: 4px 9px 10px slateblue;
-  animation: intro 0.80s ease-in-out;
+  animation: intro 0.4s ease-in-out;
 }
 .header-editar{
   display: grid;
@@ -1207,7 +1207,7 @@ font-size: 15px;
 .input-editar input{
   width: 97%;
   padding: 12px 6px;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   color: #818181;
   border: none;
@@ -1217,7 +1217,7 @@ font-size: 15px;
 @keyframes intro{
   from{
     opacity: 0;
-    transform: scale(.8);
+    transform: scale(.90);
   }
   to{
     opacity: 1;
@@ -1414,10 +1414,11 @@ font-size: 15px;
 }
 .contenedor{
   gap: 0px;
-  padding: 16px;
+  padding: 10px;
   grid-template-columns: repeat(1, 1fr);
   overflow: auto;
   height: auto;
+
 }
 
 #addBtn{
@@ -1449,7 +1450,7 @@ font-size: 15px;
 .List_check{
   padding: 0px;
   grid-column: 1 / span 2;
-  box-shadow: 0 0 0 rgba(49, 49, 49, 0);
+  box-shadow: 0 0 0px rgba(220, 220, 220, 0);
 
 }
 #taskList{
